<resources>
    <string name="app_name">智慧安监</string>
    <string name="welcome_title">智慧安监信息化综合监管平台</string>
    <string name="click_agin">再按一次退出应用</string>
    <string name="network_connection_failed">请检查网络...</string>
    <string name="loading_write">请稍后...</string>
    <string name="NotEmpty">账号或者密码不能为空</string>
    <string name="login_success">登陆成功</string>
    <string name="mine_cancellation_dialog_title">注销</string>
    <string name="mine_cancellation_dialog_content">请问是否要注销此账号</string>
    <string name="mine_cancellation_dialog_btn1">取消</string>
    <string name="mine_cancellation_dialog_btn2">确定</string>
    <string name="permission_err">拒绝权限会导致某些功能不可用。</string>
    <string name="network_error">连接失败</string>
    <string name="loading">加载中...</string>
    <string name="refreshed">刷新完成</string>
    <string name="netcantuse">网络不可用</string>
    <string name="HintText">请输入关键词...</string>
    <string name="CameraErr">拍照失败，需要开启相机权限</string>
    <string name="PleaseWriteAccount">请填写账号</string>
    <string name="PleaseWritePwd">请填写密码</string>
    <string name="loadSuccess">加载完成</string>
    <string name="refreshSuccess">刷新完成</string>
    <string name="input_search">请输入关键字搜索</string>
    <string name="connect_err">连接失败，请检查网络</string>
    <string name="nosdcard">没有找到SD卡</string>
    <string name="getPermissionErr">获取权限失败</string>
    <string name="oldpwdEmpty">请填写原始密码</string>
    <string name="newpwdEmpty">请填写新密码</string>
    <string name="samenewpwd">两次填写的新密码不一致</string>
    <string name="oldpwd_err">原始密码不正确</string>
    <string name="sameOldNew">新密码不能与原密码相同</string>
    <string name="hiddenPwd">隐藏密码</string>
    <string name="displayPwd">显示密码</string>
    <string name="getMessageErr">获取消息数量失败</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="changepwd">修改密码</string>
    <string name="location_loading">获取定位中...</string>
    <string name="update">版本检查</string>
    <string name="bbh">版本号</string>
    <string name="signout">注销</string>
    <string name="home_title">首页</string>
    <string name="enterprisedetail_title">企业详情</string>
    <string name="noticedetail_title">通知公告详情</string>
    <string name="laws_title">法规政策</string>
    <string name="lawsdetail_title">法规政策详情</string>
    <string name="risk_title">企业地图</string>
    <string name="hidden_title">隐患监管</string>
    <string name="yb_hidden">一般隐患监管</string>
    <string name="zd_hidden">重大隐患监管</string>
    <string name="yb_hidden_zl">一般隐患治理</string>
    <string name="zd_hidden_zl">重大隐患治理</string>
    <string name="yb_hidden_check">一般隐患查看</string>
    <string name="zd_hidden_check">重大隐患查看</string>
    <string name="all_hidden_check">所有隐患查看</string>
    <string name="getInfoErr">获取数据失败，请重试</string>
    <string name="nodata">暂无数据</string>
    <string name="seemap">查看地图</string>
    <string name="qyadress">企业地理位置</string>
    <string name="qyname">企业名称</string>
    <string name="EstablishmentTime">成立时间</string>
    <string name="LegalRepresentative">法定代表</string>
    <string name="DocumentCode">证件代码</string>
    <string name="EconomicType">经济类型</string>
    <string name="MajorIndustryAreas">行业领域</string>
    <string name="CompetentDepartment">主管部门</string>
    <string name="NumberOfEmployees">员工人数</string>
    <string name="RegisteredCapital">注册资金</string>
    <string name="mEnterpriseAddress">企业地址</string>
    <string name="RiskLevel">风险级别</string>
    <string name="Qypf">企业评分</string>
    <string name="aqscxxgl">安全生产信息管理</string>
    <string name="yjjyxxcx">企业应急救援信息查询</string>
    <string name="bmgl">部门管理</string>
    <string name="qyzz">企业证照</string>
    <string name="rygl">人员管理</string>
    <string name="aqtr">安全投入</string>
    <string name="Wxy">危险源</string>
    <string name="zyws">职业卫生</string>
    <string name="aqjc">安全检查</string>
    <string name="Yhxx">隐患信息</string>
    <string name="Aqscxx">安全生产信息</string>
    <string name="Gzzd">安全制度</string>
    <string name="xzzf">行政执法</string>
    <string name="yjyl">应急演练</string>
    <string name="aqpx">安全培训</string>
    <string name="DataReportTitle">数据统计</string>
    <string name="ReportLittleTitle1">企业运行统计</string>
    <string name="ReportZd1">企业用户</string>
    <string name="ReportZd2">待审核企业</string>
    <string name="ReportTjRq">统计日期</string>
    <string name="ReportLittleTitle2">本月隐患登记处理情况统计</string>
    <string name="ReportZd3">本月上报重大隐患</string>
    <string name="ReportZddsh">等待审核的重大隐患</string>
    <string name="ReportZdwzg">未整改完成的重大隐患</string>
    <string name="ReportZd33">本月上报一般隐患</string>
    <string name="ReportZd4">整改日期到期的一般隐患</string>
    <string name="ReportZd44">未整改完成的一般隐患</string>
    <string name="ReportZd5">等待审核的隐患</string>
    <string name="ReportZd6">本月未上报企业</string>
    <string name="ReportZd7">未整改完成隐患</string>
    <string name="ReportLittleTitle3">本年隐患登记处理情况统计</string>
    <string name="ReportZd8">本年度共排查隐患</string>
    <string name="ReportZdPcYbyh">本年度共排查一般隐患</string>
    <string name="ReportZdYzgYbyh">其中已整改一般隐患</string>
    <string name="ReportZdWzgYbyh">其中未整改一般隐患</string>
    <string name="ReportZdPcZdyh">本年度共排查重大隐患</string>
    <string name="ReportZdYzgZdyh">其中已整改重大隐患</string>
    <string name="ReportZdWzgZdyh">其中未整改重大隐患</string>
    <string name="ReportZd9">共排查隐患</string>
    <string name="ReportZd10">其中已整改</string>
    <string name="ReportZd11">其中未整改</string>
    <string name="ReportZd12">整改率</string>
    <string name="Dwjia">家</string>
    <string name="Dwtiao">条</string>
    <string name="HiddenName">隐患名称</string>
    <string name="PersonLiable">整改责任人</string>
    <string name="ClassificationOfHiddenDangers">隐患类型分类</string>
    <string name="rectification_type">整改类型</string>
    <string name="InvestigationDate">排查日期</string>
    <string name="GovernanceDeadline">治理截止日期</string>
    <string name="SpecificLocationOfHiddenDanger">隐患具体位置</string>
    <string name="HiddenDescription">隐患描述</string>
    <string name="YsZj">验收专家及人员</string>
    <string name="YsDate">现场验收时间</string>
    <string name="YsAddress">验收地址</string>
    <string name="YsSituation">验收情况</string>
    <string name="PleaseInputYsZj">请输入验收专家及人员</string>
    <string name="PleaseInputYsDate">请输入现场验收时间</string>
    <string name="PleaseInputYsAddress">请输入验收地址</string>
    <string name="PleaseInputYsSituation">请输入验收情况</string>
    <string name="MyAccidentPresentation">事故快报</string>
    <string name="MyPublisher">发布人:</string>
    <string name="MyReleaseTime">发布时间:</string>
    <string name="SearchViewAccidentPresentation">请输入事故名称或发布人</string>
    <string name="AccidentDetailsTitle">事故详情</string>
    <string name="deptname">事故单位</string>
    <string name="aititle">事故名称</string>
    <string name="aldate">事故日期</string>
    <string name="aitypename">事故分类</string>
    <string name="ailevelname">事故等级</string>
    <string name="swnum">死亡人数</string>
    <string name="zsnum">重伤人数</string>
    <string name="qsnum">轻伤人数</string>
    <string name="procid">事故ID</string>
    <string name="sbr">上报人</string>
    <string name="sznum">失踪人口</string>
    <string name="areaname">事故地区</string>
    <string name="AddAccidentPresentationTitle">事故填报</string>
    <string name="hintdeptname">请选择事故单位</string>
    <string name="hintaititle">请输入事故名称</string>
    <string name="hintswnum">请输入死亡人数</string>
    <string name="hintzsnum">请输入重伤人数</string>
    <string name="hintqsnum">请输入轻伤人数</string>
    <string name="hintsznum">请输入失踪人数</string>
    <string name="hintsgdq">请输入事故地区</string>
    <string name="hintsbr">请输入上报人</string>
    <string name="hintsgxq">请输入事故详情</string>
    <string name="write_success">提交成功</string>
    <string name="write_fail">提交失败</string>
    <string name="PleaseInput">请输入...</string>
    <string name="PleaseInputHiddenName">请输入隐患名称</string>
    <string name="PleaseInputZrr">请输入整改责任人</string>
    <string name="PleaseInputLocation">请输入隐患具体位置</string>
    <string name="PleaseInputYhms">请输入隐患描述</string>
    <string name="TreatmentScheme">主要治理方案</string>
    <string name="PleaseInputZyzlfa">请输入主要治理方案</string>
    <string name="PleaseInputZj">请输入验收专家及人员</string>
    <string name="SelectPicture">隐患情况图片</string>
    <string name="ImageName">图片</string>
    <string name="FieldEnvironmentalRestriction">现场环境限制</string>
    <string name="LocalSelect">本地选择</string>
    <string name="Photograph">拍照</string>
    <string name="Submit">提  交</string>
    <string name="NumberOfCasualties">伤亡人数</string>
    <string name="EconomicLoss">经济损失</string>
    <string name="TimeAndRange">时间和范围</string>
    <string name="HiddenLevel">隐患级别</string>
    <string name="submitting">正在提交...</string>
    <string name="BatchDelete">批量删除</string>
    <string name="Prompt">提示</string>
    <string name="DeleteTemporaryData">是否删除这条临时数据</string>
    <string name="DeleteSuccess">删除成功</string>
    <string name="SaveData">保存临时数据</string>
    <string name="NoNet">当前无网络，是否保存当前已填写的数据</string>
    <string name="remind">提醒</string>
    <string name="enterprise_title">企业</string>
    <string name="enterprise_detail_title">企业详情</string>
    <string name="enterprise_detail_see_map">查看地图</string>
    <string name="qy_map_title">企业地理位置</string>
    <string name="bmgl_title">部门管理</string>
    <string name="bmgl_detail_title">安全机构部门管理详情</string>
    <string name="qyzz_title">企业证照</string>
    <string name="qyzz_detail_title">企业证照详情</string>
    <string name="rygl_title">人员管理</string>
    <string name="rygl_detail_title">人员管理详情</string>
    <string name="aqtr_title">安全生产投入</string>
    <string name="aqtr_detail_title">安全生产投入详情</string>
    <string name="rules_title">安全制度</string>
    <string name="rules_detail_title">安全制度详情</string>
    <string name="wxy_title">危险源</string>
    <string name="wxy_detail_title">危险源详情</string>
    <string name="zyws_title">职业卫生</string>
    <string name="zyws_detail_title">职业卫生详情</string>
    <string name="qyaqscxx_title">企业安全生产信息</string>
    <string name="qyaqscxx_detail_title">企业安全生产信息详情</string>
    <string name="yhxx_title">企业隐患信息</string>
    <string name="yhxx_detail_title">企业隐患信息详情</string>
    <string name="enforcement_title">行政执法</string>
    <string name="enforcement_title_qy">执法记录</string>
    <string name="enforcement_detail_title">行政执法详情</string>
    <string name="add">新增</string>
    <string name="submit">提交</string>
    <string name="search_qy">企业搜索</string>
    <string name="tzsb_title">特种设备</string>
    <string name="tzsb_detail_title">特种设备详情</string>
    <string name="yjyaxx_title">应急预案</string>
    <string name="yjyaxx_detail_title">应急预案详情</string>
    <string name="yjwz_title">应急物资</string>
    <string name="yjwz_detail_title">应急物资详情</string>
    <string name="yjyl_titlte">应急演练</string>
    <string name="yjyl_detail_title">应急演练详情</string>
    <string name="aqjypx_title">安全教育培训</string>
    <string name="aqjypx_detail_title">安全教育培训详情</string>
    <string name="notice_title">通知公告</string>
    <string name="notice_detail_title">通知公告详情</string>
    <string name="commonlylist_title">一般隐患监管</string>
    <string name="commonlylist_title_qy">一般隐患治理</string>
    <string name="commonlylist_detail_title">隐患详情</string>
    <string name="ls_data">临时数据</string>
    <string name="delete_datas">批量删除</string>
    <string name="hidden_danger_title">重大隐患监管</string>
    <string name="hidden_danger_title_qy">重大隐患治理</string>
    <string name="safety_title">安全自查</string>
    <string name="safety_plan_title">安全自查计划</string>
    <string name="pending_detail_list">计划清单</string>
    <string name="pending_detail_listxq">计划清单详情</string>
    <string name="ybzlistwbzlist_title">隐患标准</string>
    <string name="nrdetail_list_title">内容清单信息</string>
    <string name="nrdetail_list_detail_title">内容清单详情</string>
    <string name="safety_record_title">安全自查记录</string>
    <string name="hidden_info_list_title">隐患信息列表</string>
    <string name="data_statistics">数据统计</string>
    <string name="emergency_rescue_title">应急救援</string>
    <string name="leadershipemergency_title">应急领导机构</string>
    <string name="leadershipemergency_detail_title">应急领导机构详情</string>
</resources>